--- a/chargebackcalculator/package.json
+++ b/chargebackcalculator/package.json
@@ -1,13 +1,16 @@
 {
   "name": "chargebackcalculator",
   "version": "0.1.0",
+  "proxy": "https://localhost:44337/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
+    "http-proxy-middleware": "^2.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
